gateway-components/30-routes/dashboard-tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: dashboard-tls-route
  namespace: dashboard
spec:
  parentRefs:
  - name: shared-gateway
    namespace: infra
  hostnames:
    "dashboard.local"
  rules:
  - backendRefs:
    - name: my-dashboard-kong-proxy
      port: 443
