gateway-components/30-routes/podinfo-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: podinfo2
spec:
  parentRefs:
  - name: shared-gateway
    namespace: infra
  # hostnames:
  # - "podinfo.local"
  rules:
  - backendRefs:
    - name: my-podinfo
      port: 9898
